# filings-cvm

./: .codespellrc  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  mypy.ini  pyproject.toml  tasks.sh  versions.json
.claude/: settings.local.json.tmp.1309435.669dfdb2720e
.github/: CLAUDE.md  dependabot.yml
.github/workflows/: contract-drift.yaml  deploy-docs.yaml  docs.yaml  portal-completeness.yaml  pr-gate.yaml  reconcile-merged-prs.yaml  release-pypi.yaml  release-test-pypi.yaml  tests.yaml
0.19/: 404.html  index.html  sitemap.xml
0.19/api/: index.html
0.19/changelog/: index.html
0.19/contributing/: index.html
0.19/faq/: index.html
0.19/ingestion/: index.html
0.19/search/: search_index.json
0.19/usage/: index.html
0.20/: 404.html  index.html  sitemap.xml
0.20/api/: index.html
0.20/changelog/: index.html
0.20/contributing/: index.html
0.20/faq/: index.html
0.20/ingestion/: index.html
0.20/search/: search_index.json
0.20/usage/: index.html
0.21/: 404.html  index.html  sitemap.xml
0.21/api/: index.html
0.21/changelog/: index.html
0.21/contributing/: index.html
0.21/faq/: index.html
0.21/ingestion/: index.html
0.21/search/: search_index.json
0.21/usage/: index.html
0.22/: 404.html  index.html  sitemap.xml
0.22/api/: index.html
0.22/changelog/: index.html
0.22/contributing/: index.html
0.22/faq/: index.html
0.22/ingestion/: index.html
0.22/search/: search_index.json
0.22/usage/: index.html
0.23/: 404.html  index.html  sitemap.xml
0.23/api/: index.html
0.23/changelog/: index.html
0.23/contributing/: index.html
0.23/faq/: index.html
0.23/ingestion/: index.html
0.23/usage/: index.html
0.24/: 404.html  index.html  sitemap.xml
0.24/api/: index.html
0.24/changelog/: index.html
0.24/contributing/: index.html
0.24/faq/: index.html
0.24/ingestion/: index.html
0.24/search/: search_index.json
0.24/usage/: index.html
0.25/: 404.html  index.html  sitemap.xml
0.25/api/: index.html
0.25/changelog/: index.html
0.25/contributing/: index.html
0.25/faq/: index.html
0.25/ingestion/: index.html
0.25/search/: search_index.json
0.25/usage/: index.html
docs/: CLAUDE.md  api.md  changelog.md  contributing.md  examples.md  faq.md  index.md  usage.md
docs/backlog/: backlog-ledger-gate_20260717_091038.md  ci-pr-quality-gate-dashboard_20260711_221927.md  ci-pr-quality-gate-ruleset_20260711_211137.md  contract-drift-job-98_20260717_233826.md  docs-meta-reader-count-drift_20260722_203000.md  docs-mike-versioning_20260711_182514.md  feat-portal-completeness-111_20260719_062823.md  fix-drift-fast-probe-113_20260718_162856.md  fix-drift-subset-contracts-117_20260718_154934.md  ingestion-adm-cart-cad_20260720_160310.md  ingestion-adm-fii-cad_20260721_212733.md  ingestion-agente-auton-cad_20260720_065232.md  ingestion-agente-fiduc-cad_20260719_210855.md  ingestion-auditor-cad_20260719_144821.md  ingestion-cad-fi-hist_20260710_030000.md  ingestion-cadastro-fi-reader_20260710_001500.md  ingestion-cda-reader_20260708_155557.md  ingestion-cia-aberta-cad_20260722_190000.md  ingestion-cia-estrang-cad_20260721_220540.md  ingestion-cia-incent-cad_20260722_121003.md  (+34 more)
docs/ingestion/: cda.md  (+36 more)
make/: library.mk
tests/: CLAUDE.md  conftest.py
(+656 files in other folders)
